register user back and front

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -1,7 +1,9 @@
 {
     "loginForm": {
+        "title": "This name will be display in the meeting",
         "username": {
             "label": "UserName"
-        }
+        },
+        "createMeeting": "Create meeting"
     }
 }
