part of join logic

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -4,6 +4,7 @@
         "username": {
             "label": "UserName"
         },
-        "createMeeting": "Create meeting"
+        "createMeeting": "Create meeting",
+        "joinMeeting": "Join meeting"
     }
 }
