rabbit and redis messages creation, base text chat UI

--- a/frontend/public/locales/en/common.json
+++ b/frontend/public/locales/en/common.json
@@ -13,5 +13,8 @@
         "unMuteMic": "Turn on microphone",
         "muteCam": "Turn off camera",
         "unMuteCam": "Turn on camera"
+    },
+    "textChat": {
+        "inputPlaceholder": "Write your message..."
     }
 }
